# functions/_pydantic/models/tickets_models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  <stdin>
-#   timestamp: 2026-04-11T18:53:18+00:00
+#   timestamp: 2026-04-12T12:16:09+00:00
 
 from __future__ import annotations
 
@@ -109,3 +109,12 @@ class BulkImportTicketsRequest(BaseModel):
 
 class UpdateTicketRequest(BaseModel):
     ticket: TicketObject
+
+
+class ValidateTicketJwtRequest(BaseModel):
+    jwt: str = Field(..., description='JWT minted for the ticket QR code.')
+
+
+class ValidateTicketJwtResponse(BaseModel):
+    valid: bool = Field(..., description='Whether the provided ticket JWT is valid.')
+    ticket: Optional[TicketObject] = None
